--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -917,7 +917,7 @@
         "\n",
         "\n",
         "        t_stats = coefficients.flatten() / standard_errors\n",
-        "        p_values = (1 - t.cdf(np.abs(t_stats), df=n - k))\n",
+        "        p_values = (1 - t.cdf((t_stats), df=n - k))\n",
         "\n",
         "\n",
         "        for i, col in enumerate(self.x.columns):\n",
